force-app/main/default/objects/Centre_Visit__c/Centre_Visit__c.object-meta.xml
<CustomObject>
    <label>Centre Visit</label>
    <nameField>
        <displayFormat>CVN-{0000}</displayFormat>
        <label>Centre Visit  No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centre Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>