force-app/main/default/objects/Centre_Visit__c/fields/Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Advisor_Information__c.Centre__c</field>
            <operation>equals</operation>
            <valueField>$Source.Centre__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Advisor_Information__c</referenceTo>
    <relationshipLabel>Centre Visits</relationshipLabel>
    <relationshipName>Centre_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>