force-app/main/default/objects/Centre_Visit__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre</label>
    <referenceTo>Centre__c</referenceTo>
    <relationshipName>Center_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>