force-app/main/default/objects/Centre_Visit__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <label>Meeting Notes</label>
    <type>TextArea</type>
</CustomField>